# cpp_filter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Measurement.h  Prob.h  README.md  kalman_filter.cpp  playground.cpp
InEKF/: CMakeLists.txt  config.h  config.yml  example_SE2.cpp  inekf_se2.cpp  inekf_se2.h  readme.md
InEKF/sensor_data/: gt_states.txt  meas_gyro.txt  meas_prior.txt
KalmanFilter/: CMakeLists.txt  kalman_filter.cpp
LInEKF/: CMakeLists.txt  config.h  example_SE2.cpp
cmake/: Config.cmake.in  InEKFConfig.cmake
doc/: doc.tex
doc/figs/: se2_example_error_plots.eps  se2_example_trajectories.eps
doc/sections/: appendices.tex  titlepage.tex
examples/: CMakeLists.txt
examples/InEKF/: CMakeLists.txt  config.yml  example_SE2.cpp
examples/InEKF/sensor_data/: est_xhat.txt  gt_states.mat  meas_gps.txt  meas_vel.txt  readme.md
examples/KalmanFilter/: CMakeLists.txt
include/InEKF/: inekf_se2.h
